--- a/ui.glade
+++ b/ui.glade
@@ -152,7 +152,7 @@
       <object class="GtkHeaderBar" id="headerbar">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="title">Gestures Manager</property>
+        <property name="title">Gesture Manager</property>
         <property name="has_subtitle">False</property>
         <property name="show_close_button">True</property>
         <child>
